add more missing translations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -173,5 +173,7 @@
     "excelHeaderPhone": "أرقام الهواتف",
     "dialogUnlockToExportTitle": "فتح الخزنة للتصدير",
     "dialogUnlockToExportContent": "الرجاء إدخال كلمة المرور الرئيسية لتصدير حساباتك.",
+    "dialogUnlockToImportTitle": "فتح الخزنة للإستيراد",
+    "dialogUnlockToImportContent": "الرجاء إدخال كلمة المرور الرئيسية لإستيراد حساباتك.",
     "biometricPromptReason": "يرجى المصادقة للوصول إلى خزنتك"
 }
