--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -188,7 +188,7 @@
     "aboutScreenTitle": "حول تطبيق PassKeeper",
     "aboutTitle": "حول عنا",
     "aboutScreenVersion": "الإصدار 1.0.0",
-    "aboutScreenDescription": "مدير كلمات مرور آمن يعمل بدون انترنت، تم إنشاؤه باستخدام فلاتر للحفاظ على حياتك الرقمية آمنة ومنظمة.",
+    "aboutScreenDescription": "تحكّم بهويتك الرقمية. PassKeeper هو مدير كلمات مرور بسيط وآمن يعمل بالكامل بدون انترنت، ويوفر لك خزنة خاصة على جهازك. بياناتك تبقى معك، ولك وحدك.",
     "aboutScreenContactTitle": "تواصل معنا",
     "aboutScreenContactEmail": "البريد الإلكتروني",
     "aboutScreenContactFacebook": "فيسبوك",
