--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -181,7 +181,7 @@
     "aboutScreenTitle": "About PassKeeper",
     "aboutTitle": "About us",
     "aboutScreenVersion": "Version 1.0.0",
-    "aboutScreenDescription": "A secure, offline-first password manager built with Flutter to keep your digital life safe and organized.",
+    "aboutScreenDescription": "Take control of your digital identity. PassKeeper is a simple and secure password manager that works completely offline, providing a private vault on your device. Your data stays with you, and only you",
     "aboutScreenContactTitle": "Contact & Connect",
     "aboutScreenContactEmail": "Email",
     "aboutScreenContactFacebook": "Facebook",
