edits the styles and the main colors

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -212,7 +212,7 @@
     "onboardingDoneButton": "تم",
 
     "aboutScreenTitle": "حول تطبيق PassKeeper",
-    "aboutTitle": "حول عنا",
+    "aboutTitle": "حول عنا / تواصل معنا",
     "aboutScreenVersion": "الإصدار 1.0.0",
     "aboutScreenDescription": "تحكّم بهويتك الرقمية. PassKeeper هو مدير كلمات مرور بسيط وآمن يعمل بالكامل بدون انترنت، ويوفر لك خزنة خاصة على جهازك. بياناتك تبقى معك، ولك وحدك.",
     "aboutScreenContactTitle": "تواصل معنا",
