--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -207,7 +207,7 @@
     "onboardingSkipButton": "Skip",
     "onboardingDoneButton": "Done",
     "aboutScreenTitle": "About PassKeeper",
-    "aboutTitle": "About us",
+    "aboutTitle": "About & Contact us",
     "aboutScreenVersion": "Version 1.0.0",
     "aboutScreenDescription": "Take control of your digital identity. PassKeeper is a simple and secure password manager that works completely offline, providing a private vault on your device. Your data stays with you, and only you",
     "aboutScreenContactTitle": "Contact & Connect",
