--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -4,7 +4,7 @@
 
     "initialScreenLoading": "جار التحميل...",
 
-    "lockScreenTitle": "PassKeeper مغلق",
+    "lockScreenTitle": "مغلق",
     "lockScreenSubtitle": "استخدم بصمتك لفتح خزنتك",
     "unlockButton": "فتح باستخدام البصمة",
 
