decoy vault and modern ui in home

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -250,5 +250,37 @@
     "deleteAccountScreenTitle": "حذف الحساب",
     "deleteAccountWarningTitle": "هل أنت متأكد تماماً؟",
     "deleteAccountWarningBody": "لا يمكن التراجع عن هذا الإجراء. سيتم حذف جميع حساباتك وفئاتك وإعداداتك المحفوظة بشكل دائم. لا يمكننا استعادة هذه البيانات لك.",
-    "deleteAccountConfirmationPrompt": "للتأكيد، الرجاء إدخال كلمة المرور الرئيسية الخاصة بك."
+    "deleteAccountConfirmationPrompt": "للتأكيد، الرجاء إدخال كلمة المرور الرئيسية الخاصة بك.",
+
+    "mirrorAccountTitle": "إنشاء حساب وهمي",
+    "mirrorAccountSubtitle": "عيّن كلمة مرور وهمية",
+    "mirrorAccountDescription": "هذه كلمة مرور ثانوية واختيارية. إذا أُجبرت على فتح خزنتك، يمكنك إدخال كلمة المرور هذه لإظهار مجموعة وهمية من الحسابات، مما يحافظ على أمان بياناتك الحقيقية.",
+    "mirrorAccountDecoyUsernameHint": "اسم المستخدم الوهمي",
+    "mirrorAccountDecoyPasswordHint": "كلمة المرور الوهمية",
+    "mirrorAccountCompleteButton": "إكمال الإعداد",
+    "mirrorAccountSkipButton": "تخطي الآن",
+    "mirrorAccountSuccess": "تم إنشاء الحساب الوهمي بنجاح!",
+    "decoyVaultTitle": "الخزنة الوهمية",
+    "decoyVaultActive": "الحساب الوهمي مفعل",
+    "decoyVaultReset": "إعادة تعيين الخزنة الوهمية",
+    "decoyVaultCreate": "إنشاء خزنة وهمية",
+    "decoyVaultSubtitle": "أضف طبقة إضافية من الأمان.",
+    "decoyResetConfirmTitle": "إعادة تعيين الخزنة الوهمية",
+    "decoyResetConfirmContent": "هل أنت متأكد من رغبتك في إعادة تعيين خزنتك الوهمية؟ سيتم حذف جميع الحسابات الوهمية بشكل دائم.",
+    "decoyResetButton": "إعادة تعيين",
+    "decoyAccountSocial": "تواصل اجتماعي",
+    "decoyAccountEmail": "بريد إلكتروني",
+    "decoyAccountShopping": "تسوق",
+    "decoyAccountServices": "حسابات الخدمات",
+    "decoyAccountWork": "عمل",
+    "decoyAccountUserName" : "اسم المستخدم",
+    "decoyCreateTitle": "تخصيص خزنتك الوهمية",
+    "decoyCreateSubtitle": "عيّن اسم مستخدم وكلمة مرور فريدين، ثم اختر عدد الحسابات الوهمية التي تريد إنشاءها.",
+    "decoyCreateGeneratedAccounts": "الحسابات المنشأة",
+    "decoyCreateGmail": "حسابات البريد",
+    "decoyCreateFacebook": "حسابات فيسبوك",
+    "decoyCreateInstagram": "حسابات انستغرام",
+    "decoyCreateShopping": "حسابات تسوق",
+    "decoyCreateButton": "إنشاء الخزنة الوهمية",
+    "validationGmailRequired": "يجب إنشاء حساب بريد إلكتروني واحد على الأقل للخزنة الوهمية."
 }
