--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -244,6 +244,38 @@
     "deleteAccountScreenTitle": "Delete Account",
     "deleteAccountWarningTitle": "Are you absolutely sure?",
     "deleteAccountWarningBody": "This action is irreversible. All of your saved accounts, categories, and settings will be permanently deleted. We cannot recover this data for you.",
-    "deleteAccountConfirmationPrompt": "To confirm, please enter your master password."
+    "deleteAccountConfirmationPrompt": "To confirm, please enter your master password.",
+
+    "mirrorAccountTitle": "Create Decoy Account",
+    "mirrorAccountSubtitle": "Set a Decoy Password",
+    "mirrorAccountDescription": "This is an optional, second password. If you are ever forced to open your vault, you can enter this password to show a fake set of accounts, keeping your real data safe.",
+    "mirrorAccountDecoyUsernameHint": "Decoy Username",
+    "mirrorAccountDecoyPasswordHint": "Decoy Password",
+    "mirrorAccountCompleteButton": "Complete Setup",
+    "mirrorAccountSkipButton": "Skip for now",
+    "mirrorAccountSuccess": "Decoy account created successfully!",
+    "decoyVaultTitle": "Decoy Vault",
+    "decoyVaultActive": "Decoy Account Active",
+    "decoyVaultReset": "Reset Decoy Vault",
+    "decoyVaultCreate": "Create a Decoy Vault",
+    "decoyVaultSubtitle": "Add an extra layer of security.",
+    "decoyResetConfirmTitle": "Reset Decoy Vault",
+    "decoyResetConfirmContent": "Are you sure you want to reset your decoy vault? All fake accounts will be permanently deleted.",
+    "decoyResetButton": "Reset",
+    "decoyAccountSocial": "Social",
+    "decoyAccountEmail": "Email",
+    "decoyAccountShopping": "Shopping",
+    "decoyAccountServices" : "Service Accounts",
+    "decoyAccountWork": "Work",
+    "decoyAccountUserName" : "Username",
+    "decoyCreateTitle": "Customize Your Decoy Vault",
+    "decoyCreateSubtitle": "Set a unique username and password, then choose how many fake accounts you want to generate.",
+    "decoyCreateGeneratedAccounts": "Generated Accounts",
+    "decoyCreateGmail": "Email Accounts",
+    "decoyCreateFacebook": "Facebook Accounts",
+    "decoyCreateInstagram": "Instagram Accounts",
+    "decoyCreateShopping": "Shopping Accounts",
+    "decoyCreateButton": "Create Decoy Vault",
+    "validationGmailRequired": "You must generate at least one email account for the decoy vault."
 
 }
