--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -216,6 +216,8 @@
     "onboardingPage2Body": "قسّم حساباتك إلى فئات مخصصة تقوم بإنشائها وإدارتها بنفسك.",
     "onboardingPage3Title": "النسخ الاحتياطي والاستعادة",
     "onboardingPage3Body": "قم بتصدير خزنتك بسهولة إلى ملف Excel واستوردها على أي جهاز. بياناتك تذهب معك أينما ذهبت.",
+    "onboardingPage4Title": "الخزنة الوهمية",
+    "onboardingPage4Body": "أنشئ خزنة ثانوية وهمية بكلمة مرور خاصة بها. في حالات الطوارئ، يمكنك إظهار الخزنة الوهمية بينما تبقى بياناتك الحقيقية مخفية تمامًا.",
     "onboardingSkipButton": "تخطي",
     "onboardingDoneButton": "تم",
 
